# jadedmukodo

./: .replit  =2.8.0  main.py  pyproject.toml  requirements.txt  sw.js
attached_assets/: Pasted--DOCTYPE-html-html-lang-hu-head-meta-charset-UTF-8-meta-name-viewport-content-1754046936055_1754046936055.txt  Pasted-Az-AlphaFold3StructurePredictor-oszt-ly-bizonyos-r-szei-pl-calculate-residue-energy-csonkoltak-v-1754088938077_1754088938079.txt  Pasted-Hi-nyz-f-gg-s-gkezel-s-T-bb-k-ls-k-nyvt-r-pl-google-cloud-cerebras-cloud-sdk-openai-impo-1754091587520_1754091587520.txt  index 2_1754075909751.html  index_1754075667847.html  main.py_1754046452847.txt  secret_widget_1754046452848.html  sw_1754046452848.js  tundi_1754075278811.txt
static/: script.js  style.css
templates/: components.html  index.html
